ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  namespace: rabbits
  annotations:
    #nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - frontend.benjaminklerens.com
    - missions.benjaminklerens.com
    - waypoints.benjaminklerens.com
    - assets.benjaminklerens.com
    secretName: tls-secret
  rules:
  - host: assets.benjaminklerens.com
    http:
      paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: asset-manager
             port:
               number: 80
  - host: missions.benjaminklerens.com
    http:
      paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: missions
             port:
               number: 80
  - host: waypoints.benjaminklerens.com
    http:
      paths:
       - path: /
         pathType: Prefix
         backend:
           service:
             name: waypoints
             port:
               number: 80
  - host: frontend.benjaminklerens.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  - host: rabbitmq.benjaminklerens.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rabbitmq
            port:
              number: 15672
